# NOTEBOOKLMEDIT

./: .env.example  .gitignore  README.md  cost.md  docker-compose.yml  package.json  plan.md  supabase_setup.sql
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  corrections.py  exports.py  issues.py  pages.py  projects.py
backend/db/: __init__.py  database.py  models.py
backend/services/: __init__.py  correction_service.py  detection_service.py  export_service.py  gemini_service.py  ocr_service.py  pdf_service.py
docs/: SPEC.md  ui.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Uploader.tsx
frontend/src/components/admin/: AdminTab.tsx
frontend/src/components/auth/: AuthForm.tsx  AuthProvider.tsx
frontend/src/components/editor/: CanvasViewer.tsx  Editor.tsx  FixQueuePanel.tsx  PagesPanel.tsx  StatusBar.tsx  TextOverlayBox.tsx  TextOverlayToolbar.tsx  TopBar.tsx
frontend/src/components/panels/: ExportPanel.tsx  ImageLibraryPanel.tsx  IssuePanel.tsx  (+1 more)
frontend/src/hooks/: useSync.ts
frontend/src/lib/: admin.ts  api.ts  gemini.ts  image-store.ts  pdf-utils.ts  store.ts  supabase.ts  sync.ts  usage.ts  utils.ts
frontend/src/store/: project.ts
scripts/: demo.sh
shared/: __init__.py  types.py
test-files/: test-basic.pptx
worker/: Dockerfile  celery_app.py
worker/tasks/: __init__.py  correction_task.py  detection_task.py  export_task.py  ocr_task.py
(+19 files in other folders)
