[project]
name = "notebooklm-fixer-backend"
version = "1.0.0"
description = "Backend for NotebookLM Fixer"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]
